Fix: Removed all scrollbars

--- a/src/app/board/components/board-column/board-column.css
+++ b/src/app/board/components/board-column/board-column.css
@@ -2,6 +2,7 @@
   /* force no left border and a very subtle shadow to avoid a dark line */
   border-left: none !important;
   background: rgb(249, 249, 249);
+  min-height: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04);
 
@@ -38,5 +39,9 @@
 .board-column [cdkDropList]::-webkit-scrollbar {
   width: 0px;
   height: 0px;
+}
+
+.column-end-spacer {
+  height: 2rem;
 }
 
